fix: scrollbar pushing UI to the left on appearance

--- a/src/style.scss
+++ b/src/style.scss
@@ -77,7 +77,7 @@
 
 @media (pointer: fine) {
   body {
-    overscroll-behavior-y: none;
+    overflow: overlay;
   }
 }
 
